Fix layout bug on Chrome

--- a/website/css/app.css
+++ b/website/css/app.css
@@ -1277,7 +1277,7 @@ ul.parsley-errors-list li {
 }
 
 #databases-conf {
-    padding-left: 20px;
+    padding-left: 15px;
 }
 
 #ci-cd-conf {
